compiler/e2e/test/snapshot/symbol/redefinitionTmp/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: symbol `First` is already defined in the scope `main`
  ╭─ bootstrap/redefinition/main.pnx:5:14
  │
1 │ public trait First:
  │              ----- symbol `First` is already defined here
  ·
5 │ public trait First:
  │              ^^^^^ redefinition here

error: symbol `Second` is already defined in the scope `main`
   ╭─ bootstrap/redefinition/main.pnx:13:17
   │
 9 │ public trait Second:
   │              ------ symbol `Second` is already defined here
   ·
13 │ public function Second():
   │                 ^^^^^^ redefinition here

error: symbol `first` is already defined in the scope `main::RedefinitionInTrait`
   ╭─ bootstrap/redefinition/main.pnx:19:21
   │
18 │     public function first()
   │                     ----- symbol `first` is already defined here
19 │     public function first()
   │                     ^^^^^ redefinition here

error: symbol `Second` is already defined in the scope `main::RedefinitionInTrait`
   ╭─ bootstrap/redefinition/main.pnx:22:17
   │
21 │     public type Second
   │                 ------ symbol `Second` is already defined here
22 │     public type Second
   │                 ^^^^^^ redefinition here

error: symbol `THIRD` is already defined in the scope `main::RedefinitionInTrait`
   ╭─ bootstrap/redefinition/main.pnx:25:18
   │
24 │     public const THIRD: int32
   │                  ----- symbol `THIRD` is already defined here
25 │     public const THIRD: int32
   │                  ^^^^^ redefinition here

error: symbol `fourth` is already defined in the scope `main::RedefinitionInTrait`
   ╭─ bootstrap/redefinition/main.pnx:28:17
   │
27 │     public function fourth()
   │                     ------ symbol `fourth` is already defined here
28 │     public type fourth
   │                 ^^^^^^ redefinition here

error: symbol `FIFTH` is already defined in the scope `main::RedefinitionInTrait`
   ╭─ bootstrap/redefinition/main.pnx:31:17
   │
30 │     public const FIFTH: int32
   │                  ----- symbol `FIFTH` is already defined here
31 │     public type FIFTH
   │                 ^^^^^ redefinition here

error: symbol `First` is already defined in the scope `main::RedefinitionInEnum`
   ╭─ bootstrap/redefinition/main.pnx:37:5
   │
35 │     First
   │     ----- symbol `First` is already defined here
36 │     Second
37 │     First(int32)
   │     ^^^^^ redefinition here

error: symbol `Second` is already defined in the scope `main::RedefinitionInEnum`
   ╭─ bootstrap/redefinition/main.pnx:38:5
   │
36 │     Second
   │     ------ symbol `Second` is already defined here
37 │     First(int32)
38 │     Second(int32)
   │     ^^^^^^ redefinition here

error: Compilation aborted due to 9 error(s)



stdout:
